Fix broken UI

--- a/assets/search/scss/_form.scss
+++ b/assets/search/scss/_form.scss
@@ -2,6 +2,7 @@
     display: flex;
     margin-bottom: 0.5rem;
     flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .search-input-group {
@@ -20,7 +21,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.75rem;
+    padding: 0 0.75rem;
     left: 0;
 
     &.disabled {
@@ -44,11 +45,15 @@
     }
 }
 
+.search-input-group {
+    display: flex;
+}
+
 .search-input {
     border-radius: 0.25rem;
     border: 1px solid var(--search-primary);
     padding: 0.75rem 2.75rem;
-    width: 100%;
+    flex: 1;
 }
 
 .search-form-control {
